<resources>
    <string name="app_name">Multiplication</string>

    <!-- MainActivity -->

    <string name="operation"> </string>
    <string name="answer"> </string>
    <string name="default_answer"> 0 </string>
    <string name="submit"> Submit </string>
    <string name="message">  </string>
    <string name="reset"> Reset </string>
    <string name="close"> X </string>
    <string name="timer"> 00:00 </string>
    <string name="score">  </string>


    <!-- HomeActivity -->

    <string name="easy"> Facile </string>
    <string name="mid"> Moyen </string>
    <string name="hard"> Difficile </string>
    <string name="tp"> Les autres TP </string>
    <string name="quitter"> Quitter </string>
    <string name="gamename"> MultiQuiz </string>

    <!-- LobbyActivity -->

    <string name="start"> Commencer </string>
    <string name="highscore"> Tableau des scores </string>

    <!-- DialogScoreName -->
    <string name="name"> Nom du joueur </string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>

    <!-- HighscoreActivity -->
    <string name="diff"> </string>


    <!-- AutreActivity -->
    <string name="autre"> Autre </string>
    <string name="dessinTp"> Le Dessin </string>
    <string name="tpDessinIntent">TP Dessin Intent</string>
    <string name="tpDessinCapteur">TP Dessin Capteur</string>
    <string name="projetFinal">Projet Final</string>

</resources>