<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg"
	android:orientation="vertical"
	tools:context=".HomeActivity">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="15dp"
		android:textSize="30sp"
		android:text="@string/autre"
		android:textColor="@color/white"
		android:gravity="center"
		android:fontFamily="sans-serif-black">

	</TextView>



	<Button
		android:id="@+id/dessinTp"
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/dessinTp"
		android:onClick="changeToDessin"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/tpDessinIntent"
		android:onClick="changeToTPDessinIntent" />

	<Button
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/tpDessinCapteur" />


	<Button
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/quitter"
		android:onClick="close"/>

</LinearLayout>