<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:scaleType="center"
		android:background="@color/bgBtn"
		android:contentDescription="@string/app_name" />

	<EditText
		android:id="@+id/name"
		android:inputType="text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginBottom="16dp"
		android:fontFamily="sans-serif"
		android:hint="@string/name" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center">

		<!-- Ajout de deux boutons -->

		<Button
			android:id="@+id/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/annuler" />
		<Button
			android:id="@+id/btnOK"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ok" />
	</LinearLayout>


</LinearLayout>
