<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg"
	android:orientation="vertical"
	tools:context=".LobbyActivity">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="15dp"
		android:textSize="30sp"
		android:text="@string/gamename"
		android:textColor="@color/white"
		android:gravity="center">

	</TextView>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="250dp"
		app:srcCompat="@mipmap/ic_banner"
		android:layout_marginBottom="50sp"/>

	<Button
		android:id="@+id/easyBtn"
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/start"
		android:onClick="start"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/highscore"
		android:onClick="tabScore"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="@drawable/rectangle_btn"
		android:text="@string/quitter"
		android:onClick="close"/>

</LinearLayout>