<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="30sp"
        android:text="@string/gamename"
        android:textColor="@color/white"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        tools:context=".MainActivity">
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="reset"
            android:text="@string/reset"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/bgBtn"
            android:textColor="@color/white"/>

        <Button
            android:foreground="@drawable/quitter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="close"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/bgBtn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="5sp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="5sp"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/default_answer"
            android:inputType="number"
            android:textSize="60sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="verifyOperation"
            android:text="@string/submit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/bgBtn"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="60sp" />
    </LinearLayout>

</GridLayout>